# my_lib

./: .clang-format  CMakeLists.txt
Source/: CMakeLists.txt  algorithms.h  meta.h  sequence.h  string_algs.h  unique_ptr_init_list.h
Test/: CMakeLists.txt
Test/my_tests/: CMakeLists.txt  alg_tests.cpp  meta_tests.cpp  sequence_tests.cpp  strings_tests.cpp  unq_ptr_il_tests.cpp
